--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="p-5 mb-4 rounded-3">
             <div class="container-fluid py-5 bg-light">
                 <p class="display-5 fw-bold text-center">Current Time: <span id="time" class="fw-normal"></span></p>
-                <div class="buttons text-center mt-5">
+                <!-- <div class="buttons text-center mt-5">
                     <button class="btn btn-lg btn-success mx-4 px-4" id="start" onclick=start()>Start</button>
                     <button class="btn btn-lg btn-danger mx-4 px-4" id="stop" onclick=stop()>Stop</button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="script.js"></script>
